# maguey-old

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  magueyConfig.cmake.in
debian/: changelog  control  copyright  rules
include/boids/: debuggl.h  game.h  game_object.h  joystick_input.h  key_input.h  mouse_input.h  obj_loader.h  renderable.h  skybox.h  triangle_mesh.h  util.h
include/maguey/: camera.h  camera.hpp  game.h  game.hpp  game_object.h  game_object.hpp  game_time.hpp  joystick_input.hpp  key_input.hpp  maguey.h  maguey.hpp  material.hpp  mesh_loader.h  mesh_loader.hpp  mouse_input.hpp  obj_loader.h  obj_loader.hpp  program.hpp  renderable.h  renderable.hpp  skybox.h  skybox.hpp  std_shaders.hpp  triangle_mesh.h  triangle_mesh.hpp  util.hpp
src/: CMakeLists.txt  camera.cpp  debuggl.cpp  game.cpp  game_object.cpp  game_time.cpp  joystick_input.cpp  key_input.cpp  material.cpp  mouse_input.cpp  obj_loader.cpp  program.cpp  skybox.cpp  triangle_mesh.cpp  util.cpp
test/: CMakeLists.txt  loader_test.cpp  main_test.cpp  materials_test.cpp
